--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   --z-tooltip: 10;
   --z-fixed: 100;
 }
-
+svg#freepik_stories-delivery-address:not(.animated) .animable {opacity: 0;}svg#freepik_stories-delivery-address.animated #freepik--Locator--inject-101 {animation: 1.5s Infinite  linear floating;animation-delay: 0s;}svg#freepik_stories-delivery-address.animated #freepik--Scooter--inject-101 {animation: 1.5s Infinite  linear wind;animation-delay: 0s;}            @keyframes floating {                0% {                    opacity: 1;                    transform: translateY(0px);                }                50% {                    transform: translateY(-10px);                }                100% {                    opacity: 1;                    transform: translateY(0px);                }            }                    @keyframes wind {                0% {                    transform: rotate( 0deg );                }                25% {                    transform: rotate( 1deg );                }                75% {                    transform: rotate( -1deg );                }            }        .animator-hidden { display: none; }
 @media screen and (min-width: 968px) {
   :root {
     --biggest-font-size: 3rem;
